--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>fr.treeptik</groupId>
     <artifactId>cloudunit-docker-client</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>docker-client</name>
     <description>Another docker client</description>
