--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <autoReleaseAfterClose>true</autoReleaseAfterClose>
-    </properties>
+		<maven.surefire.plugin.version>2.18</maven.surefire.plugin.version>
+	</properties>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -251,6 +252,17 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefire.plugin.version}</version>
+				<configuration>
+					<includes>
+						<include>**/*.java</include>
+					</includes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
